<resources>
    <string name="app_name">Charging Animations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="stop">Stop</string>
    <string name="charging_animation">Charging Animation</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_app">More Apps</string>
    <string name="policy">Privacy Policy</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="animations">Animations</string>
    <string name="birds_animations">Birds Animations</string>
    <string name="heart_animations">Heart Animations</string>
    <string name="circle_animations">Circle Animations</string>
    <string name="flowers_animations">Flowers Animations</string>
    <string name="enable_animations">Enable Animations</string>
    <string name="single_tap">Single Tap</string>
    <string name="closing_method">Closing method</string>
    <string name="animation_duration">Animation Duration</string>
    <string name="settings">Settings</string>
    <string name="double_tap">Double Tap</string>
    <string name="ten_seconds">Ten Seconds</string>
    <string name="twenty_seconds">Twenty Seconds</string>
    <string name="thirty_seconds">Thirty Seconds</string>
    <string name="_1_minute">1 minute</string>
    <string name="always">Always</string>
    <string name="animal_animations">Animal Animations</string>
    <string name="degreeSymbol">℃</string>
    <string name="charging_type">Charging Type</string>
    <string name="health">Health</string>
    <string name="technology">Technology</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="anim_apply_lock_screen">Animation Applied on LockScreen</string>
    <string name="anim_applied_charging_screen">Animation applied on charging screen</string>
    <string name="anim_applied_both_screen">Animation applied on both screen</string>
</resources>